--- a/CSS/team.css
+++ b/CSS/team.css
@@ -1,3 +1,8 @@
+body {
+    background-image: url('../images/digital.jpg');
+    background-size: 100%;
+}
+
 #SECTION_1 {
     box-sizing: border-box;
     color: rgb(51, 51, 51);
